# AxDenSynDelaySNN

./: .gitignore  LICENSE  README.md  config_loader.py  datasets.py  generate_sweep_id.py  main.py  pyproject.toml  train.py  utils.py
configs/: GSC.yaml  GSC_sparsity.yaml  SSC.yaml  SSC_sparsity.yaml
models/: layers.py  snn.py  snn_delays.py
wb_configs/: various_delays_gsc_all.yaml  various_delays_gsc_sparsity.yaml  various_delays_ssc_all.yaml  various_delays_ssc_sparsity.yaml
